--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -7,6 +7,7 @@
     background-color: lightgoldenrodyellow;
     width: 100%;
     padding: 15px 50px;
+    
 }
 
 .dropdown{
@@ -21,10 +22,18 @@
 }
 .cart{
     margin-left: 20px;
+   
+}
+.cart img{
+   width: 20px;
+   height: 20px;
 }
 .navbar{
     display: flex;
     
+}
+.cartbtn{
+    background-color: tomato;
 }
 .kids{
     margin-right: 120px;
@@ -33,6 +42,45 @@
     width: 150px;
     height: 30px;
 }
+.small-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 60px;
+}
+.col-4{
+    flex-basis: 25%;
+    padding: 10px;
+    margin-bottom: 50px;
+}
+.col-4 img{
+    width: 100%;
+    height: 100%;
+}
+.row{
+    margin-bottom: 50px;
+}
+.footer {
+    position: sticky;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+  }
+
+
+
+
+
+
+
+
+
+
+
    
 @media screen and (max-width:500px){
     .header{
@@ -59,6 +107,7 @@
     .searchbtn{
         margin-top: 10px;
     }
+
     .men{
         margin-bottom: 10px;
     }
@@ -73,9 +122,11 @@
         margin-bottom: 10px;
         margin-right: 18px;
     }
-    .cart{
-       margin: 6px 10px;
-    }
+   .cartbtn{
+     margin: 0  10px 0 -12px ;
+   
+    
+   }
     .shopsections{
         margin-left: 120px;
 
