--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -59,19 +59,16 @@
     width: 100%;
     height: 100%;
 }
-.row{
+.small-container.row{
     margin-bottom: 50px;
 }
-.footer {
-    position: sticky;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+.mainfooter{
     background-color: black;
-    color: white;
-    text-align: right;
-    padding: 0 60px;
-  }
+    text-align: center;
+    
+
+}
+
   .contact{
       text-decoration: none;
       color: white;
@@ -81,9 +78,39 @@
     text-decoration: none;
     color: white;
   }
-   .cart{
-
+  .checkoutContainer{
+      width: 1200px;
+      margin: 0 auto;
+      background-color:lightgoldenrodyellow;
+      margin-top: 80px;
+      padding: 60px;
+      border-radius: 15px;
+      
   }
+  .btnpadding{
+
+      padding: 4px 166px;
+      border-radius: 15px;
+      font-size: 20px;
+      color: wheat;
+  }
+  .btnpadreg{
+    padding: 4px 133px;
+    border-radius: 15px;
+    font-size: 20px;
+    color: wheat;
+  }
+  .paymentContainer{
+    width: 600px;
+    margin: 0 auto;
+    background-color:lightgoldenrodyellow;
+    padding: 60px;
+   
+    
+}
+.paymenttype{
+    display: flex;
+}
 
 
 
