--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,130 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+
+
+
+
+/* ********************************************* */
+
+/* Css for Cart */
+
+
+.container-products  {
+  max-width:650px;
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-top: 50px;
+  background-color: rgb(225, 252, 252);
+}
+
+.container-products ion-icon{
+  font-size: 30px;
+color: blue;
+margin-left: 10px;
+margin-right: 10px;
+cursor: pointer;
+}
+
+.product-header {
+  width: 100%;
+  max-width: 650px;
+display: flex;
+justify-content: flex-start;
+border-bottom: 4px solid gray;
+margin: 0 auto;
+}
+
+.product-title {
+  width: 45%;
+}
+
+.price{
+  width: 15%;
+  border-bottom: 1px solid gray;
+  display: flex;
+align-items: center;
+}
+
+.quantity {
+  width: 30%;
+  border-bottom: 1px solid gray;
+  display: flex;
+  align-items: center;
+}
+
+.total{
+  width: 10%;
+  border-bottom: 1px solid gray;
+  display: flex;
+  align-items: center;
+}
+
+.product {
+  width: 45%;
+display: flex;
+justify-content: space-around;
+align-items: center;
+padding: 10px;
+border-bottom: 1px solid gray;
+}
+
+
+.product ion-icon {
+  cursor: pointer;
+}
+
+.products {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.products img {
+  width: 65px;
+}
+
+.cartTotalContainer {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 0px ;
+  text-align: center;
+  
+}
+
+.cartTotalTitle{
+  width: 30%;
+ padding-top: 25px;
+}
+
+.cartTotal{
+  width: 15%;
+}
+
+.checkout {
+  display: flex;
+text-align: center;
+margin: auto;
+padding-left: 450px;
+padding-top: 50px;
+
+}
+
+
+@media (max-width: 650px){
+  nav h2 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+.sm-hide{display: none;}
+
+.products,
+.product-header{justify-content: center;}
+
+.cartTotalContainer{padding-right: 10%;}
+}
